src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: #dae7ff;
    --foreground: #182236;

    --card: 0 0% 100%;
    --card-foreground: 20 14.3% 4.1%;

    --popover: 0 0% 100%;
    --popover-foreground: 20 14.3% 4.1%;

    --primary: #3d4350;
    --primary-foreground: 60 9.1% 97.8%;

    --secondary: #8ea6d4;
    --secondary-foreground: #000000;

    --muted: 60 4.8% 95.9%;
    --muted-foreground: 25 5.3% 44.7%;

    --accent: 60 4.8% 95.9%;
    --accent-foreground: 24 9.8% 10%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 60 9.1% 97.8%;

    --border: 20 5.9% 90%;
    --input: 20 5.9% 90%;
    --ring: 20 14.3% 4.1%;

    --radius: 0.5rem;
    --home: linear-gradient(180deg, #f3f7ff 30%, #718fcc);
    --welcome-button: linear-gradient(
      94deg,
      #4c566a 7.52%,
      rgba(46, 52, 64, 0.15) 135%
    );
  }

  .dark {
    --background: #384153;
    --foreground: 60 9.1% 97.8%;

    --card: 20 14.3% 4.1%;
    --card-foreground: 60 9.1% 97.8%;

    --popover: 20 14.3% 4.1%;
    --popover-foreground: 60 9.1% 97.8%;

    --primary: #2e3440;
    --primary-foreground: 24 9.8% 10%;

    --secondary: #4c566a;
    --secondary-foreground: #ffffff;

    --muted: 12 6.5% 15.1%;
    --muted-foreground: 24 5.4% 63.9%;

    --accent: 12 6.5% 15.1%;
    --accent-foreground: 60 9.1% 97.8%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 60 9.1% 97.8%;

    --border: 12 6.5% 15.1%;
    --input: 12 6.5% 15.1%;
    --ring: 24 5.7% 82.9%;

    --home: linear-gradient(180deg, #2e3440, #1e232e);
    --welcome-button: linear-gradient(
      94deg,
      #4c566a 7.52%,
      rgba(46, 52, 64, 0.15) 135%
    );
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply text-foreground;
  }
}

.home-bg {
  background: var(--home);
}
.welcome-button {
  background: var(--welcome-button);
  color: white;
}
.welcome-button:hover {
  color: white;
}
.outline-button {
  @apply w-32 min-w-fit rounded-xl border-[1px] border-secondary-foreground bg-transparent text-lg text-secondary-foreground;
}

*,
:root {
  font-family: "Montserrat Alternates", sans-serif;
}

.fma-thin {
  font-weight: 100;
  font-style: normal;
}

.fma-thin-italic {
  font-weight: 100;
  font-style: italic;
}

.fma-extralight {
  font-weight: 200;
  font-style: normal;
}

.fma-extralight-italic {
  font-weight: 200;
  font-style: italic;
}

.fma-light {
  font-weight: 300;
  font-style: normal;
}

.fma-light-italic {
  font-weight: 300;
  font-style: italic;
}

.fma-regular {
  font-weight: 400;
  font-style: normal;
}

.fma-regular-italic {
  font-weight: 400;
  font-style: italic;
}

.fma-medium {
  font-weight: 500;
  font-style: normal;
}

.fma-medium-italic {
  font-weight: 500;
  font-style: italic;
}

.fma-semibold {
  font-weight: 600;
  font-style: normal;
}

.fma-semibold-italic {
  font-weight: 600;
  font-style: italic;
}

.fma-bold {
  font-weight: 700;
  font-style: normal;
}

.fma-bold-italic {
  font-weight: 700;
  font-style: italic;
}

.fma-extrabold {
  font-weight: 800;
  font-style: normal;
}

.fma-extrabold-italic {
  font-weight: 800;
  font-style: italic;
}

.fma-black {
  font-weight: 900;
  font-style: normal;
}

.fma-black-italic {
  font-weight: 900;
  font-style: italic;
}

.navbar_button {
  @apply rounded-3xl bg-primary text-[16px] font-[500] text-lightbluetext;
}

.custom_scroll::-webkit-scrollbar {
  width: 0.5rem;
}
@media (max-width: 768px) {
  .custom_scroll::-webkit-scrollbar {
    width: 0rem;
  }
}

.custom_scroll::-webkit-scrollbar-track {
  @apply bg-primary;
}

.custom_scroll::-webkit-scrollbar-thumb {
  @apply bg-lightbluetext;
  border-radius: 2rem;
}

